content/terraform-mcp-server/v0.5.x/docs/mcp-server/deploy.mdx
---
page_title: Deploy the Terraform model context protocol (MCP) server 
description: |-
 Learn how to deploy the Terraform MCP server, which helps you write configuration using LLM responses sourced from the Terraform registry.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-04-01T22:23:45-06:00
last_modified: 2026-04-08T00:18:29.000Z
# END AUTO GENERATED METADATA
---

# Deploy the Terraform MCP server

The Terraform Model Context Protocol (MCP) server enables AI models to generate Terraform configuration using up-to-date information from the Terraform Registry. This page explains how to install, configure, and integrate the MCP server with your AI client.

## Overview

The Terraform MCP server is a specialized service that provides AI models with access to current Terraform provider documentation and module information. You can deploy the server to the following environments:

- **Local deployment**: Run the server on your workstation using `stdio` mode for direct communication through standard input/output
- **Remote deployment**: Run the server on a remote instance using `streamable-http` mode for network-based communication

### Secure configuration

Implement the following recommendations to securely deploy the MCP server:

- **Hosting**: We recommend running the MCP Server locally at `127.0.0.1` through the STDIO or HTTP Streamable transport protocol to limit publicly exposing your Terraform environment. The default transport is set to STDIO. If you host the service remotely, we recommend implementing additional security controls at the application and network layers.
- **CORS**: By default, Terraform MCP server runs in `strict` CORS (cross-origin request) mode and the allowed origins are empty. As a result, all cross-origin requests are blocked unless the server is explicitly configured to allow them. Exercise caution when you need to change allowed origins list.
- **Terraform authentication**: The `TFE_SKIP_VERIFY` option is enabled by default. We recommend keeping the option enabled so that communication with your Terraform environment is encrypted. We also recommend limiting the permissions of the `TFE_TOKEN` used to authenticate as described in the Terraform documentation. Refer to [API tokens](/terraform/cloud-docs/users-teams-organizations/api-tokens) for more information.
- **Rate limiting**: We recommend setting up global and per-session rate limits to prevent the server or dependent resources from becoming overloaded through excessive requests. 
- **TLS**: When making your MCP server accessible remotely, we recommend adding a TLS certificate to protect in-transit communication through the wire.

### Installation methods

Choose from three installation options based on your environment and preferences:

| Method | Best for | Requirements |
|--------|----------|--------------|
| [Docker](#run-in-docker) | Most users, consistent environments | Docker Engine v20.10.21+ or Docker Desktop v4.14.0+. Refer to the [Docker documentation](https://docs.docker.com/desktop) for installation instructions. |
| [Compiled binary](#run-the-compiled-binary) | Lightweight deployments, specific OS needs | Compatible operating system |
| [Source installation](#install-from-source) | Development, customization | Go development environment |

## Requirements

Terraform MCP server v0.3.0 or newer is required to authenticate Terraform MCP server with the registry. You must also obtain an authentication token from HCP Terraform or your Terraform Enterprise deployment so that the MCP server can present it. Refer to [API tokens](/terraform/cloud-docs/users-teams-organizations/api-tokens) for instructions.

We recommend authenticating the server with the registry to ensure that communication in your Terraform environment is encrypted. Refer to [Secure configuration](#secure-configuration) for more information.

## Run in Docker

Docker provides the most reliable and consistent way to run the Terraform MCP server across different environments. To run the server in Docker, start Docker on your system, then integrate with your AI assistant. 

### Enable authentication

Set the `TFE_TOKEN` environment variable to your HCP Terraform or Terraform Enteprise API token. Set the `TFE_HOSTNAME` environment variable to the URL of your Terraform Enteprise deployment. Refer to the [environment variables reference](/terraform/mcp-server/reference#environment-variables) for more information.

<Tabs>

<Tab heading="Visual Studio Code">

1. Verify [Visual Studio Code](https://code.visualstudio.com/docs) is installed.
1. Verify the [GitHub Copilot extension](https://code.visualstudio.com/docs/copilot/overview) is installed and chats are configured to `Agent` mode.
1. Verify MCP support enabled, refer to the [VS Code MCP documentation](https://code.visualstudio.com/docs/copilot/chat/mcp-servers) for more information.
1. To use the MCP server in all workspaces, add the following configuration to your user settings JSON file:

  ```json
  {
    "mcp": {
      "servers": {
        "terraform": {
          "command": "docker",
          "args": [
            "run",
            "-i",
            "--rm",
            "-e", "TFE_TOKEN=${input:tfe_token}",
            "-e", "TFE_ADDRESS=${input:tfe_address}",
            "hashicorp/terraform-mcp-server"
          ]
        }
      },
      "inputs": [
        {
          "type": "promptString",
          "id": "tfe_token",
          "description": "Terraform API Token",
          "password": true
        },
        {
          "type": "promptString",
          "id": "tfe_address",
          "description": "Terraform Address",
          "password": false
        }
      ]
    }
  }
  ```

  Alternatively, to use the server in a specific workspace, create an `mcp.json` file with the following configuration in your workspace's `.vscode` directory:

  ```json
  {
    "servers": {
      "terraform": {
        "command": "docker",
        "args": [
          "run",
          "-i",
          "--rm",
          "-e", "TFE_TOKEN=${input:tfe_token}",
          "-e", "TFE_ADDRESS=${input:tfe_address}",
          "hashicorp/terraform-mcp-server"
        ]
      }
    },
    "inputs": [
      {
        "type": "promptString",
        "id": "tfe_token",
        "description": "Terraform API Token",
        "password": true
      },
      {
        "type": "promptString",
        "id": "tfe_address",
        "description": "Terraform Address",
        "password": false
      }
    ]
  }
  ```

</Tab>

<Tab heading="Cursor">

1. Verify [Cursor](https://www.cursor.com) is installed.
1. Verify the MCP support configured, refer to [Cursor's MCP documentation](https://docs.cursor.com/context/model-context-protocol#configuring-mcp-servers) for more information.    
1. To use the MCP server in all workspaces, add the following configuration to your user settings JSON file:

  ```json
  {
    "mcp": {
      "servers": {
        "terraform": {
          "command": "docker",
          "args": [
            "run",
            "-i",
            "--rm",
            "-e", "TFE_ADDRESS=<<TFE_ADDRESS_HERE>>",
            "-e", "TFE_TOKEN=<<TFE_TOKEN_HERE>>",
            "hashicorp/terraform-mcp-server"
          ]
        }
      }
    }
  }
  ```

1. Verify the installation by opening the chat pane and selecting **Chat Settings** from the ellipses menu.
1. Choose **Agent** from the **Default new chat mode** drop-down menu.
1. Select **MCP** from the **Cursor Settings** sidebar to verify that Terraform MCP server tools are enabled. Refer to the [tools reference](/terraform/mcp-server/reference#available-tools) for more information.
  
</Tab>

<Tab heading="Claude Desktop">

1. Verify [Claude Desktop](https://support.anthropic.com/en/articles/10065433-installing-claude-for-desktop) is installed.
1. Verify MCP support is configured, refer to [Claude Desktop's MCP documentation](https://modelcontextprotocol.io/quickstart/user) for more information.    
1. Create or edit the `mcp.json` file and add the following configuration:

  ```json
  {
    "mcpServers": {
      "servers": {
        "terraform": {
          "command": "docker",
          "args": [
            "run",
            "-i",
            "--rm",
            "-e", "TFE_ADDRESS=<<TFE_ADDRESS_HERE>>",
            "-e", "TFE_TOKEN=<<TFE_TOKEN_HERE>>",
            "hashicorp/terraform-mcp-server"
          ]
        }
      }
    }
  }
  ```

1. Verify the integration by opening the chat pane and clicking the **search and tools** slider icon.
1. Click **terraform-mcp-server** to verify that all tools are enabled and accessible. Refer to the [tools reference](/terraform/mcp-server/reference#available-tools) for more information.

</Tab>

<Tab heading="Kiro">

1. Verify [Kiro CLI](https://kiro.dev/docs/cli/) or [Kiro IDE](https://kiro.dev/downloads/) is installed.
1. Verify MCP support is configured, refer to the [Kiro CLI MCP documentation](https://kiro.dev/docs/cli/mcp/) or [Kiro IDE MCP documentation](https://kiro.dev/docs/mcp/) for more information. 

    For Kiro IDE, enable MCP support by pressing the `Cmd+,` or `Ctrl+,` keys to open the **Settings** page, then search for MCP.
1. Create or open either the global `mcp.json` file at `~/.kiro/settings/mcp.json` or the local file at `<project-root>/.kiro/settings/mcp.json`. 
1. Add following configuration to your `mcp.json` file:

  ```json
  {
    "mcpServers": {
      "terraform": {
        "command": "docker",
        "args": [
          "run",
          "-i",
          "--rm",
          "-e", "TFE_ADDRESS=<<TFE_ADDRESS_HERE>>",
          "-e", "TFE_TOKEN=<<TFE_TOKEN_HERE>>",
          "hashicorp/terraform-mcp-server"
        ]
      }
    }
  }
  ```

</Tab>

<Tab heading="Bob Shell / Bob IDE">

1. Verify [Bob Shell or Bob IDE](https://bob.ibm.com) is installed.
1. Verify MCP support is configured, refer to [Bob's MCP documentation](https://bob.ibm.com/docs/ide) for more information.
1. To use the MCP server, add the following configuration to `~/.bob/settings/mcp_settings.json` for global configuration or `.bob/mcp.json` for local projects:

  ```json
  {
    "mcpServers": {
      "terraform": {
        "command": "docker",
        "args": [
          "run",
          "-i",
          "--rm",
          "-e", "TFE_ADDRESS=<<PASTE_TFE_ADDRESS_HERE>>",
          "-e", "TFE_TOKEN=<<PASTE_TFE_TOKEN_HERE>>",
          "hashicorp/terraform-mcp-server"
        ],
        "disabled": false
      }
    }
  }
  ```

1. Load the server configuration using either the Bob shell or IDE:
   - Shell: Run the `bob /mcp refresh` command.
   - IDE: Open settings and navigate to the MCP tab to load the configuration.

</Tab>

</Tabs>

### Run without authentication

Set the `tfe_token` environment variable to your HCP Terraform or Terraform Enteprise API token. Set the `tfe_hostname` environment variable to the URL of your Terraform Enteprise deployment. Refer to the [environment variables reference](/terraform/mcp-server/reference#environment-variables) for more information. 

<Tabs>

<Tab heading="Visual Studio Code">

1. Verify [Visual Studio Code](https://code.visualstudio.com/docs) is installed.
1. Verify the [GitHub Copilot extension](https://code.visualstudio.com/docs/copilot/overview) is installed and chats are configured to `Agent` mode.
1. Verify MCP support enabled, refer to the [VS Code MCP documentation](https://code.visualstudio.com/docs/copilot/chat/mcp-servers) for more information.
1. To use the MCP server in all workspaces, add the following configuration to your user settings JSON file:

  ```json
  {
    "mcp": {
      "servers": {
        "terraform": {
          "command": "docker",
          "args": [
            "run",
            "-i",
            "--rm",
            "hashicorp/terraform-mcp-server"
          ]
        }
      }
    }
  }
  ```

  Alternatively, to use the server in a specific workspace, create an `mcp.json` file with the following configuration in your workspace's `.vscode` directory:

  ```json
  {
    "servers": {
      "terraform": {
        "command": "docker",
        "args": [
          "run",
          "-i",
          "--rm",
          "hashicorp/terraform-mcp-server"
        ]
      }
    }
  }
  ```

1. Verify the integration by opening the chat interface and selecting **Agent** from the mode settings.
1. Click the tools icon to verify that Terraform MCP server tools appear in the available tools list.

</Tab>

<Tab heading="Cursor">

1. Verify [Cursor](https://www.cursor.com) is installed.
1. Verify the MCP support configured, refer to [Cursor's MCP documentation](https://docs.cursor.com/context/model-context-protocol#configuring-mcp-servers) for more information.    
1. To use the MCP server in all workspaces, add the following configuration to your user settings JSON file:

  ```json
  {
    "mcp": {
      "servers": {
        "terraform": {
          "command": "docker",
          "args": [
            "run",
            "-i",
            "--rm",
            "hashicorp/terraform-mcp-server"
          ]
        }
      }
    }
  }
  ```

1. Verify the installation by opening the chat pane and selecting **Chat Settings** from the ellipses menu.
1. Choose **Agent** from the **Default new chat mode** drop-down menu.
1. Select **MCP** from the **Cursor Settings** sidebar to verify that Terraform MCP server tools are enabled. Refer to the [tools reference](/terraform/mcp-server/reference#available-tools) for more information.
  
</Tab>

<Tab heading="Claude Desktop">

1. Verify [Claude Desktop](https://support.anthropic.com/en/articles/10065433-installing-claude-for-desktop) is installed.
1. Verify MCP support is configured, refer to [Claude Desktop's MCP documentation](https://modelcontextprotocol.io/quickstart/user) for more information.    
1. Create or edit the `mcp.json` file and add the following configuration:

  ```json
  {
    "mcpServers": {
      "servers": {
        "terraform": {
          "command": "docker",
          "args": [
            "run",
            "-i",
            "--rm",
            "hashicorp/terraform-mcp-server"
          ]
        }
      }
    }
  }
  ```

1. Verify the integration by opening the chat pane and clicking the **search and tools** slider icon.
1. Click **terraform-mcp-server** to verify that all tools are enabled and accessible. Refer to the [tools reference](/terraform/mcp-server/reference#available-tools) for more information.

</Tab>

<Tab heading="Kiro">

1. Verify [Kiro CLI](https://kiro.dev/docs/cli/) or [Kiro IDE](https://kiro.dev/downloads/) is installed.
1. Verify MCP support is configured, refer to the [Kiro CLI MCP documentation](https://kiro.dev/docs/cli/mcp/) or [Kiro IDE MCP documentation](https://kiro.dev/docs/mcp/) for more information. 

    For Kiro IDE, enable MCP support by pressing the `Cmd+,` or `Ctrl+,` keys to open the **Settings** page, then search for MCP.
1. Create or open either the global `mcp.json` file at `~/.kiro/settings/mcp.json` or the local file at `<project-root>/.kiro/settings/mcp.json`. 
1. Add following configuration to your `mcp.json` file:

  ```json
  {
    "mcpServers": {
      "terraform": {
        "command": "docker",
        "args": [
          "run",
          "-i",
          "--rm",
          "hashicorp/terraform-mcp-server"
        ]
      }
    }
  }
  ```

</Tab>

</Tab>

<Tab heading="Bob Shell / Bob IDE">

1. Verify [Bob Shell or Bob IDE](https://bob.ibm.com) is installed.
1. Verify MCP support is configured, refer to [Bob's MCP documentation](https://bob.ibm.com/docs/ide) for more information.
1. To use the MCP server, add the following configuration to `~/.bob/settings/mcp_settings.json` for global configuration or `.bob/mcp.json` for local projects:

  ```json
  {
    "mcpServers": {
      "terraform": {
        "command": "docker",
        "args": [
          "run",
          "-i",
          "--rm",
          "hashicorp/terraform-mcp-server"
        ],
        "disabled": false
      }
    }
  }
  ```

1. Load the server configuration:
   - **Bob Shell**: Run `/mcp refresh` command
   - **Bob IDE**: Open settings and navigate to the MCP tab to load the configuration

</Tab>

</Tabs>

## Run the compiled binary

The compiled binary option provides a lightweight installation without Docker dependencies. This method is ideal when you want to minimize resource usage or work in environments with restricted container access.

Download the binary for your operating system and architecture from the [release library](https://releases.hashicorp.com/terraform-mcp-server). Then, add the configure your client settings. 

If you downloaded a supported version of the binary, you can enable authentication in the configuration. Otherwise, you can run the server without authentication. 

### Enable authentication

Set the `tfe_token` environment variable to your HCP Terraform or Terraform Enteprise API token. Set the `tfe_hostname` environment variable to the URL of your Terraform Enteprise deployment. Refer to the [environment variables reference](/terraform/mcp-server/reference#environment-variables) for more information.

Replace `/path/to/terraform-mcp-server` with the path to your downloaded binary.

```json
{
  "mcp": {
    "servers": {
      "terraform": {
        "type": "stdio",
        "command": "/path/to/terraform-mcp-server",
        "env": {
          "TFE_TOKEN": "<tfe-token>"
        },
      }
    }
  }
}
```

### Run without authentication

```json
{
  "mcp": {
    "servers": {
      "terraform": {
        "type": "stdio",
        "command": "/path/to/terraform-mcp-server"
      }
    }
  }
}
```

## Install from source

Installing from source gives you access to the latest features and allows for customization. This method requires a Go development environment.

1. Install the latest stable release.

  ```shell-session
  $ go install github.com/hashicorp/terraform-mcp-server/cmd/terraform-mcp-server@latest
  ```

  Alternatively, you can install the development version on `main`.

  ```shell-session
  $ go install github.com/hashicorp/terraform-mcp-server/cmd/terraform-mcp-server@main
  ```

1. After installation, add the following configuration to your client.

  ```json
  {
    "mcp": {
      "servers": {
        "terraform": {
          "command": "/path/to/terraform-mcp-server",
          "args": ["stdio"]
        }
      }
    }
  }
  ```

  Replace `/path/to/terraform-mcp-server` with the actual path to your downloaded binary. The binary location depends on your Go installation and `GOPATH` configuration. 
  
Use `which terraform-mcp-server` to find the installed binary path.

## Enable telemetry

Terraform MCP server uses OpenTelemetry to collect telemetry metrics. Set the `OTEL_METRICS_ENABLED` environment variable to `true` to enable metrics. You must use the streamable HTTP server path to collect metrics. Streaming metrics is not supported on the default stdio path. 

In HTTP mode, the server implements the following lifecycle:

1. Creates an OTel meter provider 
1. Exports metrics over `OTLP/HTTP` to `OTEL_METRICS_ENDPOINT` 
1. Flushes the metrics according to the interval set by `OTEL_METRICS_EXPORT_INTERVAL` 
1. Adds the service identity is `OTEL_METRICS_SERVICE_NAME` and `OTEL_METRICS_SERVICE_VERSION`

Terraform MCP server generates the metrics and exports them to the configured OTLP endpoint. A remote instance of the server can then either receive or forward the telemetry to Datadog through its own collector or forwarding setup. This repo produces OTel metrics, but the remote repo is responsible for routing them to Datadog.
Refer to [telemetry metrics reference](/terraform/mcp-server/reference#telemetry-metrics) for more information.

## Start the server

You can use the `terraform-mcp-server` CLI and specify the transport protocol you want to use to start the server. Refer to the [transport protocols reference](/terraform/mcp-server/reference#transport-protocols) for more information.

Start the server in `stdio` mode. 

```shell-session
$ terraform-mcp-server stdio [--log-file /path/to/log]
```

Run the following command on the local instance to start the server in `streamable-http` mode:

```shell-session
$ terraform-mcp-server streamable-http \
  [--transport-port 8080] \
  [--transport-host 127.0.0.1] \
  [--mcp-endpoint /mcp] \
  [--log-file /path/to/log]
```

Instead of setting values manually, you can also use the supported environment variables. Refer to the [environment variables reference](/terraform/mcp-server/reference#environment-variables) for details.

## Next steps

- Begin prompting your AI model about Terraform configurations. Refer to [Prompt an AI model](/terraform/mcp-server/prompt) for guidance on effective prompting techniques.
- The server provides access to up-to-date provider documentation.
- Ask for help with specific Terraform resources and modules. 
- Explore advanced configuration options for your specific deployment needs.